--- a/HTML/project1.html
+++ b/HTML/project1.html
@@ -1,4 +1,10 @@
+<!DOCTYPE html>
 <html>
+  <Head>
+    <title>ZenZone</title>
+    <meta charset="utf-16">
+    <link rel="stylesheet" href="project1.css">
+  </Head>
 <head>
 </head>
 <body>
